# il-news-bot

./: .air.toml  .dockerignore  .gitignore  .gitleaks.toml  .terraform.lock.hcl  Dockerfile  README.md  Taskfile.yml  deno.json  docker-compose.yml  go.mod  go.sum  main.go  main.tf  pyproject.toml
.githooks/: pre-commit
agents/: agents.go  news.go  sanitize.go  tools.go  types.go  utils.go
agents/feeds/: db.go  feeds.go  rss.go  telegram.go
agents/tools/: tools.go
moltis/config/: moltis.toml
moltis/home/: SOUL.md
nullclaw-data/: .gitignore  config.json  init.sh
src/: db.py  main.py  main.ts  telegram_bot.py
src/agents/: graph.py  graph.ts  prompt_guard.py
src/agents/tools/sources/: abu_ali_express.py  abu_ali_express.ts  israel_hayom.py  israel_hayom.ts  marker.py  marker.ts  ynet.py  ynet.ts
src/agents/tools/sources/common/: rss.py  rss.ts  telegram.py  telegram.ts
src/telegram/: bot.ts
telegram/: telegram.go  utils.go
